@@ -94,17 +94,22 @@ Cisco IOS 11.3 or 12.0 / PIX <= 6.2	0, 15, 15
 
 # Discovered by: Tony Lloyd, May 2006
 # Observed on: Cisco PIX 520 running PIXOS 6.3(5)
-Cisco PIX >= 6.3	0, 5, 5, 5, 5, 5
+Cisco PIX 6.3	0, 5, 5, 5, 5, 5
 
 # 1st Pattern Discovered by: Roy Hills, November 2002
 # Observed on: Cisco VPN Concentrator 3005 running (unknown version)
 # Observed on: VPN 3000 Concentrator Version 3.6.3.Rel Oct 04 2002 16:23:00
+# Observed on: VPN 3005 Concentrator Version 4.7.2.L Jun 11 2007 14:07:29
 # 2nd Pattern Discovered by: Guy Widloecher, March 2003
 # Observed on: Cisco VPN 3005 Concentrator Version 3.5.2
+# This second pattern may be due to the earlier software version, or it could
+# be a missed packet.
 # There are several models: 3005, 3015, 3020, 3030, 3060 and 3080, which are
 # equivalent to the old Altiga C5, C15 Etc.  All models are believed to share
 # the same backoff pattern.
-Cisco VPN Concentrator	0, 8, 8, 8
+# The first pattern is also generated by Cisco PIX 7.0
+# Observed on: Cisco PIX 515E running PIX OS 7.0(7)
+Cisco VPN Concentrator or PIX 7.0	0, 8, 8, 8
 Cisco VPN Concentrator	0, 8, 8
 
 # Discovered by: Roy Hills, December 2002
